After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 633701 - [regression] Message list doesn't print lines
[regression] Message list doesn't print lines
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: X11
2.21.x
Other Linux
: Normal critical
: ---
Assigned To: gtk-bugs
gtk-bugs
: 634012 634672 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2010-11-01 14:00 UTC by Milan Crha
Modified: 2011-02-04 16:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screen shot of the problem (90.96 KB, image/png)
2010-11-02 11:14 UTC, Akhil Laddha
Details

Description Milan Crha 2010-11-01 14:00:57 UTC
After this weekend update message list doesn't print messages, though, based on the scrollbar, there are any. Also when clicking on the white place I can see message changing in the preview panel, only the message list itself is totally empty/doesn't update its content on paint.

Steps:
a) open in mailer - everything seems OK
b) search for "subject or sender contains"; fill some which will find messages

As soon as the search is activated the message list gets vanished. Nothing except close & open helps, neither changing folder, nor clearing the search.
Comment 1 Milan Crha 2010-11-02 07:54:29 UTC
Turned out it's enough to change folders (move from one to another).
Comment 2 Milan Crha 2010-11-02 10:25:46 UTC
Benjamin, could you look on this, please? As you made most of the changes in the part then you should have the best overview of it and what can be wrong. I only found few forgotten cairo_destroy calls and I added them, but nothing more. This is a show-stopper for a mailer.
Comment 3 Akhil Laddha 2010-11-02 11:14:59 UTC
Created attachment 173690 [details]
Screen shot of the problem
Comment 4 Milan Crha 2010-11-04 18:20:18 UTC
*** Bug 634012 has been marked as a duplicate of this bug. ***
Comment 5 Benjamin Otte (Company) 2010-11-08 21:45:25 UTC
commit bf395263b289b7b6c62bc3c420a5dc82cef757f6
Author: Benjamin Otte <otte@redhat.com>
Date:   Mon Nov 8 16:14:14 2010 -0500

    gdk: Use the correct surface size when creating surfaces
    
    Previously we used the size of the csw window, which could easily be
    huge and cause CAIRO_SURFACE_INVALID_SIZE errors. If we use the real
    size, we work around this problem. The surface can now potentially be
    bigger than before but we should handle that when clipping in csw.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=633701
Comment 6 Benjamin Otte (Company) 2010-11-08 21:49:25 UTC
This bug happened when you opened a message list that had a height of more than 32767 pixels (so I guess around 2000 messages?) for the first time. It then created a cairo_surface_t in an error state and kept it. So the error didn't go away anymore.

I applied the patch to the 2.24 branch for npow, because I'm not siure it doesn't have any unintended side effects. It'd be nice if a few people tested it to make sure it didn't break anything and then we can pull it into 2.22.
Comment 7 Yanko Kaneti 2010-11-09 07:38:06 UTC
Applied to the gtk2-2.22.0-3.fc15.x86_64 fedora rawhide package and it fixed the evolution 2.91.2 message list problem and so far doesn't seem to have any unintended consequences on the rest.
Comment 8 Akhil Laddha 2010-11-12 12:12:02 UTC
*** Bug 634672 has been marked as a duplicate of this bug. ***